Music Player Added

--- a/config.properties
+++ b/config.properties
@@ -1,4 +1,4 @@
 #Set Settings
-#Mon Sep 29 14:28:17 GMT+06:00 2025
-background=/home/shromi/IdeaProjects/firstFX/bg5.gif
+#Thu Oct 16 12:00:03 GMT+06:00 2025
+background=/Users/md.sazidalam/Desktop/untitled1/pomolo/bg2.jpg
 default_background=Background.jpg
