--- a/config.properties
+++ b/config.properties
@@ -1,4 +1,5 @@
-#Set Settings
-#Thu Oct 16 12:00:03 GMT+06:00 2025
+#Mon Nov 03 22:28:23 GMT+06:00 2025
 background=/Users/md.sazidalam/Desktop/untitled1/pomolo/bg2.jpg
 default_background=Background.jpg
+pomodoro_duration_minutes=0
+pomodoro_duration_seconds=180
