updated miniplayer pomodoro progress

--- a/config.properties
+++ b/config.properties
@@ -1,4 +1,4 @@
-#Thu Nov 27 00:09:36 GMT+06:00 2025
+#Thu Nov 27 00:20:11 GMT+06:00 2025
 background=/Users/md.sazidalam/Desktop/untitled1/pomolo/bg5.jpg
 default_background=Background.jpg
 pomodoro_duration_minutes=25
@@ -10,3 +10,4 @@ session.2025-11-23=300,10
 session.2025-11-24=2,12
 session.2025-11-25=0,9
 session.2025-11-26=25,1
+session.2025-11-27=1,1
