--- a/config.properties
+++ b/config.properties
@@ -1,13 +1,13 @@
-#Thu Nov 27 14:32:20 GMT+06:00 2025
-background=/Users/md.sazidalam/Desktop/untitled1/pomolo/bg5.jpg
-default_background=Background.jpg
-pomodoro_duration_minutes=25
-pomodoro_duration_seconds=70
-session.2025-11-20=70,3
-session.2025-11-21=40,2
-session.2025-11-22=90,4
-session.2025-11-23=300,10
-session.2025-11-24=2,12
+#Thu Nov 27 18:55:59 BDT 2025
+session.2025-11-27=5,5
 session.2025-11-25=0,9
 session.2025-11-26=25,1
-session.2025-11-27=4,4
+session.2025-11-23=300,10
+session.2025-11-24=2,12
+session.2025-11-21=40,2
+session.2025-11-22=90,4
+session.2025-11-20=70,3
+default_background=Background.jpg
+pomodoro_duration_minutes=25
+background=/Users/md.sazidalam/Desktop/untitled1/pomolo/bg5.jpg
+pomodoro_duration_seconds=70
