Fix: pomodoro analytics problem

--- a/config.properties
+++ b/config.properties
@@ -1,3 +1,4 @@
-#Wed Dec 03 16:05:49 BDT 2025
+#Thu Dec 04 16:24:36 BDT 2025
+session.2025-12-04=7,7
 session.2025-12-03=5,1
-pomodoro_duration_seconds=300
+pomodoro_duration_seconds=60
